--- a/docs/index.css
+++ b/docs/index.css
@@ -14,6 +14,7 @@ html {
 }
 html > body {
   height: 100vh;
+  cursor: none;
 }
 
 /* Custom Lib */
@@ -41,15 +42,14 @@ html > body {
 .cursor {
   width:20px;
   height:20px;
-  border-radius:50%;
-  color: darkgray;
+  background-color: darkgray;
+  border-radius: 50%;
   position:fixed;
   pointer-events:none;
-  border: 3px solid currentcolor;
   z-index: 100;
 }
 
-/* #loading {
+#loading {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,7 +60,7 @@ html > body {
   height:100vh;
   background-color:white;
   z-index:1000;
-} */
+}
 
 /* Custom */
 :root {
@@ -1032,7 +1032,7 @@ html > body {
 /* 디자인의 본질 */
 #essence {
   width: 100%;
-  height: 1200px;
+  height: 1400px;
   background: var(--gradient-background);
   font-family: 'Noto Serif KR';
 }
@@ -1093,13 +1093,21 @@ html > body {
   background-size: cover;
 }
 #concept .explain > span {
+  position: relative;
   color: var(--point-color);
-  font-weight: 600;
-  cursor: pointer;
+  font-weight: 500;
 }
 
 /* 컬러 & 타이포그래피 */
 /* 컬러 & 타이포그래피(PC) */
+#logo .title {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+#logo img {
+  width: 200px;
+}
 #color-typography {
   position: relative;
   width: 100%;
@@ -1113,7 +1121,6 @@ html > body {
 #color .explain {
   text-align: center;
   margin-bottom: 7rem;
-  font-size: 1.1rem;
 }
 #color-typography .pc #color .color-pallete {
   position: relative;
