--- a/docs/index.css
+++ b/docs/index.css
@@ -1489,6 +1489,9 @@ html > body {
   }
 }
 @media (max-width: 768px) {
+  .cursor {
+    display: none;
+  }
   #top-bar .top-bar_menu,
   #top-bar .top-bar_icons {
     display: none;
