--- a/docs/index.css
+++ b/docs/index.css
@@ -1293,7 +1293,7 @@ html > body {
   font-size: 1.2rem;
 }
 #about-me #personality .words > span {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Noto Serif KR';
   position: absolute;
   font-weight: bold;
 }
