--- a/docs/index.css
+++ b/docs/index.css
@@ -221,7 +221,7 @@ html > body {
   position: absolute;
   top: 0;
   right: -500px;
-  width: 70%;
+  width: 40%;
   height: 100vh;
   background-color: var(--light-background);
   padding: 2rem;
@@ -1326,7 +1326,7 @@ html > body {
 #about-me #personality .writer {
   font-family: 'Noto Serif KR';
   position: absolute;
-  bottom: 25%;
+  bottom: 22%;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -1343,7 +1343,7 @@ html > body {
 }
 #about-me #personality .words > span:nth-child(1) {
   top: 50%;
-  left: 22%;
+  left: 25%;
   font-size: 2.5rem;
   color: rgba(0, 0, 0, 0.3);
 }
@@ -1394,7 +1394,7 @@ html > body {
   top: 50%;
   right: 33%;
   font-size: 2rem;
-  color: rgba(0, 0, 0, 0.05);
+  color: rgba(0, 0, 0, 0.1);
 }
 #about-me #personality .words > span:nth-child(10) {
   top: 60%;
@@ -1407,7 +1407,7 @@ html > body {
   top: 32%;
   left: 37%;
   font-size: 2rem;
-  color: rgba(0, 0, 0, 0.05);
+  color: rgba(0, 0, 0, 0.1);
 }
 #about-me .space-box03,
 #about-me .space-box04 {
@@ -1452,7 +1452,7 @@ html > body {
 #contact {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--light-background);
 }
 #contact .inner {
@@ -1485,7 +1485,7 @@ html > body {
   font-size: 1.5rem;
 }
 #contact video {
-  height: 100vh;
+  min-height: 900px;
   width: 100%;
   object-fit: cover;
   margin: 0 auto;
